[package]
name = "metrics-nats-exporter"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Oliver Chalk"]
license = "MIT OR Apache-2.0"

[lints.clippy]
arithmetic_side_effects = "warn"
# See `clippy.toml`.
disallowed_methods = "warn"
match_bool = "allow"
missing_const_for_fn = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow"
trivially_copy_pass_by_ref = "warn"

[dependencies]
async-nats = "0.40.0"
futures = "0.3.31"
hashbrown = "0.15.2"
itertools = "0.14.0"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
metrics-util = "0.19.0"
quanta = "0.12.5"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["net", "rt", "time"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
