[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
new_without_default = "allow"
disallowed_methods = "warn"                  # See `clippy.toml`.
get_first = "allow"
inline-always = "allow"
match_bool = "allow"
missing_const_for_fn = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless-raw-string-hashes = "allow"
pedantic = { level = "warn", priority = -1 }
struct_field_names = "allow"
print_stdout = "warn"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
todo = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"

[workspace.dependencies]
async-nats = "<1.0.0"
dotenvy = "0.15"
expect-test = "1.5.1"
futures = "0.3.31"
hashbrown = "0.15.2"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
metrics-util = "0.19.0"
proptest = "1.6.0"
proptest-derive = "0.5.1"
quanta = "0.12.5"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
