[package]
name = "metrics-nats-exporter"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Oliver Chalk"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
async-nats.workspace = true
futures.workspace = true
hashbrown.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
quanta.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt", "time"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
expect-test.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
